<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shawnli.pickupball.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:contentDescription="@string/basketball_img"
            app:srcCompat="@mipmap/ic_launcher_foreground"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/courtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/court_name"/>

            <TextView
                android:id="@+id/courtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/court_address"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/gameRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/playerRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
                android:id="@+id/takeMeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_game"
                android:layout_marginStart="50dp"
                tools:layout_editor_absoluteX="60dp"
                tools:layout_editor_absoluteY="434dp"
                style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/createGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game"
            android:layout_marginStart="50dp"
            tools:layout_editor_absoluteX="214dp"
            tools:layout_editor_absoluteY="434dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>



</LinearLayout>
