<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartGameActivity"
    android:background="@color/coolBlue">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/coolBlue"
            >

            <TextView
                android:id="@+id/gameNamingTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pleaseEnterNewGame"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="28sp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/enterGameName"
                android:inputType="text"
                android:textColor="#fff"
                android:text="@string/game_name"/>

            <Button
                android:id="@+id/createGameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_game"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:background="@drawable/button_shape"
                android:padding="10dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>