<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:layout_margin="10dp"
    android:background="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/gameInfoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/gameName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/game_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_weight="0.25"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="63dp"
                android:orientation="vertical"
                android:layout_marginTop="22dp"
                android:layout_weight="0.5">
                <TextView
                    android:id="@+id/numberOfPlayersPlaying"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/people_playing"
                    android:textSize="16sp"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/numberOfPlayersOnWay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/people_on_the_way"
                    android:textSize="16sp"
                    android:textStyle="italic"/>

            </LinearLayout>

            <Button
                android:id="@+id/takeMeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_shape"

                android:text="@string/join_game"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/playerRecyclerView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/parent_list_item_expand_arrow"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:src="@android:drawable/arrow_down_float"
            tools:ignore="ContentDescription"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

</android.support.v7.widget.CardView>
